# weauto-wx-cli

./: .gitignore  README.md  config.toml.example  pyproject.toml  requirements.txt  start_bot.sh
tests/: test_core.py
weauto_wx_cli/: __init__.py  agent.py  agent_store.py  bot.py  cli.py  config.py  detector.py  image_editing.py  image_generation.py  image_resolver.py  log_view.py  models.py  ocr.py  people.py  python_sandbox.py  reply.py  sender.py  state.py  window.py  wx_cli.py
