[project]
name = "weauto-wx-cli"
version = "0.1.0"
description = "Read WeChat messages with wx-cli and send replies through a guarded macOS GUI sender."
requires-python = ">=3.11,<3.14"
dependencies = [
  "numpy>=1.26.0",
  "opencv-python>=4.9.0",
  "Pillow>=10.0.0",
  "playwright>=1.59.0",
  "pyautogui>=0.9.54",
  "pyobjc-framework-Quartz>=11.0",
  "pyperclip>=1.8.2",
  "pycryptodome>=3.23.0",
  "rapidocr-onnxruntime>=1.2.3,<1.3",
]

[project.scripts]
weauto-wx = "weauto_wx_cli.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
